# openenv-aiops

./: Dockerfile  README.md  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_client.py
openenv_aiops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: app.py
